--- a/hdcevents/public/css/styles.css
+++ b/hdcevents/public/css/styles.css
@@ -1,140 +1,165 @@
-            /* General */
-            
-            * {
-                font-family: 'Roboto';
-            }
-            
-            body {
-                min-height: 100vh;
-                padding-bottom: 100px;
-                position: relative;
-            }
-            
-            header {
-                background-color: #fff;
-                border-bottom: 1px solid #ccc;
-            }
-            
-            .row {
-                margin: 0;
-            }
-            
-            .container-fluid {
-                padding: 0;
-            }
-            
-            .btn-primary {
-                background-color: #f2a340;
-                border: 2px solid #c28008;
-            }
-            
-            .btn-primary:hover {
-                border: #c28008;
-                border-color: #c28008;
-            }
-            /* navbar */
-            
-            #navbar img {
-                width: 40px;
-                border-radius: 0px;
-            }
-            
-            #navbar {
-                justify-content: space-between;
-                background-color: #fff;
-                padding: 5px 0;
-            }
-            
-            #navbar a {
-                font-size: 14px;
-                color: #757575;
-            }
-            
-            #navbar a:hover {
-                color: #f2a340;
-            }
-            /* Search Conatiner */
-            
-            #search-container {
-                background-image: url("../img/hand-1850120_1920.jpg");
-                background-size: cover;
-                background-position: center;
-                height: 400px;
-                padding: 50px;
-                text-align: center;
-            }
-            
-            #search-container h1 {
-                color: #f2a340;
-                margin-bottom: 30px;
-                font-weight: 900;
-            }
-            
-            #search-container form {
-                width: 50%;
-                margin: 0 auto;
-            }
-            /* Events list */
-            
-            #events-container {
-                padding: 50px;
-            }
-            
-            #events-container h2 {
-                margin-bottom: 10px;
-            }
-            
-            #events-container .subtitle {
-                margin-bottom: 30px;
-                color: #757575;
-            }
-            
-            #cards-container {
-                display: flex;
-            }
-            
-            #events-container .card {
-                flex: 1 1 0;
-                max-width: 25%;
-                border-radius: 10px;
-                padding: 0;
-                margin: 5px;
-            }
-            
-            #events-container img {
-                max-height: 150px;
-                border-top-left-radius: 10px;
-                border-top-right-radius: 10px;
-            }
-            
-            .card .card-date {
-                font-size: 12px;
-                color: #ccc;
-            }
-            
-            .card .card-title {
-                font-size: 20px;
-                color: #212121;
-                font-weight: bold;
-                margin-bottom: 30px;
-            }
-            
-            .card-participants {
-                font-size: 14px;
-                color: #757575;
-            }
-            /* footer */
-            
-            footer {
-                text-align: center;
-                background-color: #353E48;
-                color: #FFF;
-                padding: 30px;
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-            }
-            
-            footer p {
-                margin-bottom: 0;
-            }
+/* General */
+
+* {
+    font-family: 'Roboto';
+}
+
+body {
+    min-height: 100vh;
+    padding-bottom: 100px;
+    position: relative;
+}
+
+header {
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
+}
+
+.row {
+    margin: 0;
+}
+
+.container-fluid {
+    padding: 0;
+}
+
+.btn-primary {
+    background-color: #f2a340;
+    border: 2px solid #c28008;
+}
+
+.btn-primary:hover {
+    border: #c28008;
+    border-color: #c28008;
+}
+
+
+/* navbar */
+
+#navbar img {
+    width: 40px;
+    border-radius: 0px;
+}
+
+#navbar {
+    justify-content: space-between;
+    background-color: #fff;
+    padding: 5px 0;
+}
+
+#navbar a {
+    font-size: 14px;
+    color: #757575;
+}
+
+#navbar a:hover {
+    color: #f2a340;
+}
+
+
+/* Search Conatiner */
+
+#search-container {
+    background-image: url("../img/hand-1850120_1920.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+    padding: 50px;
+    text-align: center;
+}
+
+#search-container h1 {
+    color: #f2a340;
+    margin-bottom: 30px;
+    font-weight: 900;
+}
+
+#search-container form {
+    width: 50%;
+    margin: 0 auto;
+}
+
+
+/* Events list */
+
+#events-container {
+    padding: 50px;
+}
+
+#events-container h2 {
+    margin-bottom: 10px;
+}
+
+#events-container .subtitle {
+    margin-bottom: 30px;
+    color: #757575;
+}
+
+#cards-container {
+    display: flex;
+}
+
+#events-container .card {
+    flex: 1 1 0;
+    max-width: 25%;
+    border-radius: 10px;
+    padding: 0;
+    margin: 5px;
+}
+
+#events-container img {
+    max-height: 150px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.card .card-date {
+    font-size: 12px;
+    color: #ccc;
+}
+
+.card .card-title {
+    font-size: 20px;
+    color: #212121;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.card-participants {
+    font-size: 14px;
+    color: #757575;
+}
+
+
+/* Event create page */
+
+#event-create-container {
+    padding: 30px;
+}
+
+#event-create-container label {
+    font-weight: bold;
+}
+
+#event-create-container input,
+#event-create-container select,
+#event-create-container textarea {
+    font-size: 12px;
+}
+
+
+/* footer */
+
+footer {
+    text-align: center;
+    background-color: #353E48;
+    color: #FFF;
+    padding: 30px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+footer p {
+    margin-bottom: 0;
+}
