--- a/hdcevents/public/css/styles.css
+++ b/hdcevents/public/css/styles.css
@@ -33,6 +33,16 @@ header {
     border-color: #c28008;
 }
 
+.msg {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid#c3e6cb;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
+    padding: 10px;
+}
+
 
 /* navbar */
 
@@ -57,7 +67,7 @@ header {
 }
 
 
-/* Search Conatiner */
+/* Search Container */
 
 #search-container {
     background-image: url("../img/hand-1850120_1920.jpg");
@@ -100,11 +110,11 @@ header {
 }
 
 #events-container .card {
-    flex: 1 1 0;
+    flex: 1 1 24%;
     max-width: 25%;
     border-radius: 10px;
     padding: 0;
-    margin: 5px;
+    margin: .5%;
 }
 
 #events-container img {
