--- a/hdcevents/public/css/styles.css
+++ b/hdcevents/public/css/styles.css
@@ -223,6 +223,12 @@ header {
     display: inline-block;
 }
 
+/* Edit Page */
+.img-preview{
+    width: 100px;
+    margin-top: 20px;
+}
+
 /* footer */
 
 footer {
