--- a/hdcevents/public/css/styles.css
+++ b/hdcevents/public/css/styles.css
@@ -43,6 +43,20 @@ header {
     padding: 10px;
 }
 
+#info-container .already-joined-msg{
+    margin: 15px 0;
+    color: #004085;
+    background-color: #CCE5FF;
+    border: 1px solid #B8DAFF;
+    padding: 10px;
+    width: 275px;
+    border-radius: 10px;
+}
+
+#imgPrincipal{
+    border-radius: 10px !important;
+}
+
 
 /* navbar */
 
